--- a/examples/nsl_pk/Makefile
+++ b/examples/nsl_pk/Makefile
@@ -1,4 +1,5 @@
-include ../../Makefile
+DY_HOME=../..
+include $(DY_HOME)/Makefile
 
 test:
 	cd $(DY_HOME)/obj; OCAMLPATH=$(FSTAR_HOME)/lib ocamlbuild -use-ocamlfind -pkg batteries -pkg fstar.lib DY_Example_NSL_Debug.native
