DH example sanity check for trace invariants and proof refactoring

--- a/examples/iso_dh/Makefile
+++ b/examples/iso_dh/Makefile
@@ -4,3 +4,7 @@ include $(DY_HOME)/Makefile
 test:
 	cd $(DY_HOME)/obj; OCAMLPATH=$(FSTAR_HOME)/lib ocamlbuild -use-ocamlfind -pkg batteries -pkg fstar.lib DY_Example_DH_Debug.native
 	$(DY_HOME)/obj/DY_Example_DH_Debug.native
+
+test-traceinvariants:
+	cd $(DY_HOME)/obj; OCAMLPATH=$(FSTAR_HOME)/lib ocamlbuild -use-ocamlfind -pkg batteries -pkg fstar.lib DY_Example_DH_Debug_TraceInvariants.native
+	$(DY_HOME)/obj/DY_Example_DH_Debug_TraceInvariants.native
