Authenticated send and receive function; first draft of events that can be extended by a higher layer

--- a/.fst.config.json
+++ b/.fst.config.json
@@ -12,7 +12,6 @@
     "src/lib/utils",
     "src/lib/communication",
     "examples/nsl_pk",
-    "examples/iso_dh",
-    "examples/single_message"
+    "examples/iso_dh"
   ]
 }
