Makefiles: no FSTAR_HOME

--- a/examples/iso_dh/Makefile
+++ b/examples/iso_dh/Makefile
@@ -2,5 +2,5 @@ DY_HOME ?= ../..
 include $(DY_HOME)/Makefile
 
 test:
-	cd $(DY_HOME)/obj; OCAMLPATH=$(FSTAR_HOME)/lib ocamlbuild -use-ocamlfind -pkg batteries -pkg fstar.lib DY_Example_DH_Debug.native
+	cd $(DY_HOME)/obj; $(FSTAR_EXE) --ocamlenv ocamlbuild -use-ocamlfind -pkg batteries -pkg fstar.lib DY_Example_DH_Debug.native
 	$(DY_HOME)/obj/DY_Example_DH_Debug.native
