feat: add Communication Layer (#50)
Co-authored-by: Klaas Pruiksma <qaphla@users.noreply.github.com>
Co-authored-by: Klaas Pruiksma <klaas.pruiksma@sec.uni-stuttgart.de>

--- a/.fst.config.json
+++ b/.fst.config.json
@@ -10,6 +10,7 @@
     "src/lib/hpke",
     "src/lib/state",
     "src/lib/utils",
+    "src/lib/communication",
     "examples/nsl_pk",
     "examples/iso_dh"
   ]
