feat: upstream some TreeKEM labels (guard, event, etc)

--- a/.fst.config.json
+++ b/.fst.config.json
@@ -8,6 +8,7 @@
     "src/lib/crypto",
     "src/lib/event",
     "src/lib/hpke",
+    "src/lib/label",
     "src/lib/state",
     "src/lib/utils",
     "src/lib/communication",
